# finit

./: .gitignore  .gitmodules  .globalrc  .travis.yml  AUTHORS  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Changelog  LICENSE  Makefile  Makefile.am  NEWS.md  NEWS.rst  README  README.eeexubuntu  README.mandriva  README.md  README.rst  TODO  TODO.md  TODO.org  TODO.rst  api.c  autogen.sh  check.sh  client.c  common.mk  cond-w.c  cond.c  cond.h  conf.c  conf.h  configure  configure.ac  event.c  event.h  exec.c  (+40 more)
.github/: CODE-OF-CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  coverity.yml  docs.yml  release.yml  weekly.yml
archive/: README.mandriva  finit-alt.c  finit-mod.c  finit-org.c
archive/contrib/: Makefile.gdium  services.sh-mdv2008.1-pterjan  services.sh-miura
contrib/: Makefile.am  Makefile.gdium  README.md  finit.conf  fstab.bb  procmon.sh  service  services  services.sh-mdv2008
contrib/alpine/: Makefile.am  README.md  build.sh  finit.conf  install.sh  rc.local  uninstall.sh
contrib/alpine/finit.d/: Makefile.am  dropbear.conf  getty.conf  keymap.conf  klogd.conf  modules.conf  syslogd.conf  tty.conf
contrib/alpine/finit.d/available/: Makefile.am  acpid.conf  crond.conf  dropbear.conf  getty.conf  keymap.conf  klogd.conf  lxdm.conf  modules.conf  ntpd.conf  syslog.conf  syslogd.conf  tty.conf  watchdog.conf
contrib/debian/: Makefile.am  README.md  build.sh  finit.conf  install.sh
contrib/debian/finit.d/: Makefile.am  console-setup.conf  keyboard-setup.conf  rsyslogd.conf  sshd.conf
contrib/debian/grub.d/: 40_custom  Makefile.am
contrib/finit.d/: S05keyboard-setup  S18acpid  S18kbd  services
contrib/patches/: linux-4.9-inotify-in-mask-create.patch  mkinitrd-6.0.34-nash-hotplug.patch
contrib/void/: Makefile.am  README.md  build.sh  finit.conf  install.sh  rc.local
contrib/void/finit.d/: Makefile.am  acpid.conf  dhcpcd.conf  uuidd.conf
contrib/void/finit.d/available/: Makefile.am  acpid.conf  crond.conf  dhcpcd.conf  dmeventd.conf  getty.conf  keymap.conf  klogd.conf  lxdm.conf  modules.conf  ntpd.conf  sshd.conf  syslog.conf  syslogd.conf  uuidd.conf
doc/: AUTHORS  ChangeLog.md  Makefile.am  TODO.md  bootstrap.md  build.md  cmdline.md  commands.md  conditions.md  config.md  distro.md  example.md  extra.css  features.md  index.md  inetd.md  initctl.md  keventd.md  plugins.md  requirements.md  runlevels.md  runparts.md  service.md  signals.md  state-machine.md  watchdog.md
doc/config/: Makefile.am  cgroups.md  env.md  files.md  index.md  limitations.md  logging.md  rescue.md  runlevels.md  runparts.md  service-env.md  service-opts.md  service-sync.md  service-wrappers.md  services.md  sysv.md  task-and-run.md  templating.md  tty.md
doc/img/: finit.txt
docs/: CONTRIBUTING.md  Makefile.am  TODO.md  bootstrap.md  build.md  cmdline.md  conditions.md  config.md  plugins.md  signals.md
examples/: finit.conf  services
libite/: Makefile  copyfile.c  dir.c  fexist.c  fisdir.c  fmode.c  lite.h  rsync.c  rsync.mk  strlcpy.c  strtonum.c
libsystemd/: .gitignore  Makefile.am  libsystemd.pc.in  sd-daemon.c  sd-daemon.h
m4/: .gitignore  expand.m4  plugin.m4
man/: Makefile.am  finit.8  finit.conf.5  initctl.8
plugins/: .gitignore  Makefile  Makefile.am  alsa-utils.c  bootmisc.c  chargen.c  chronyd.c  daytime.c  dbus.c  discard.c  echo.c  foo.c  hook-scripts.c  hotplug.c  hwclock.c  initctl.c  lost.c  mdevd.c  modprobe.c  modules-load.c  netlink.c  pidfile.c  procps.c  qmi-proxy.c  resolvconf.c  rtc.c  sys.c  testserv.c  time.c  tty.c  urandom.c  usr.c  x11-common.c
src/: .gitignore  Makefile.am  api.c  cgreaper.sh  cgroup.c  cgroup.h  cgutil.c  cgutil.h  client.c  client.h  coldplug  cond-w.c  cond.c  cond.h  conf.c  conf.h  devmon.c  devmon.h  exec.c  finit.c  finit.h  getty.c  helpers.c  helpers.h  inetd.c  inetd.h  initctl.c  initctl.h  iwatch.c  iwatch.h  keventd.c  libfinit.pc.in  log.c  log.h  logit.c  logrotate.c  mdadm.c  mount.c  pid.c  pid.h  (+32 more)
system/: .gitignore  10-hotplug.conf  10-hotplug.conf.in  90-testserv.conf  Makefile.am  hotplug.conf  testserv.conf
test/: .gitignore  Makefile  Makefile.am  README.md  add-remove-dynamic-service-sub-config.sh  add-remove-dynamic-service.sh  bootstrap-crash.sh  check.sh  checkself.sh  chrootsetup.sh  cond-start-task.sh  crashing.sh  depserv.sh  devmon.sh  failing-sysv.sh  global-envs.sh  initctl-status-subset.sh  lib.sh  notify.sh  pidfile.sh  pre-fail.sh  pre-post-serv.sh  process-depends.sh  rclocal.sh  ready-serv.sh  restart-self.sh  run-restart-forever.sh  run-task-tricks.sh  run.sh  runlevel.sh  runparts.sh  runtest.sh  setup-root.sh  setup-sysroot.sh  setup_root.sh  signal-service.sh  start-kill-service.sh  start-kill-stop.sh  start-stop-fserv.sh  start-stop-serv.sh  (+15 more)
test/add-remove-dynamic-service/: test.sh
test/add-remove-dynamic-service-sub-config/: test.sh
test/common/: .gitignore  Makefile.am  S01-service.sh  fserv.c  serv.c  service.conf  service.sh  slay.sh
test/lib/: Makefile.am  enter.sh  exec.sh  setup.sh  start.sh  sysroot.mk
test/skel/etc/: env  fstab  inittab
test/skel/etc/init.d/: S01-service.sh  S02-serv.sh  rcK  rcS
test/skel/etc/rc.d/: S01abc.sh  foo.sh
test/skel/etc/rcS.d/: S01abc.sh  S02def.sh  test.sh
test/skel/sbin/: chrootsetup.sh  fail.sh  service.sh  task.sh
test/src/: .gitignore  Makefile.am  sd-daemon.c  sd-daemon.h  serv.c
test/start-stop-service/: test.sh
test/start-stop-service-sub-config/: test.sh
test/tenv/: Makefile.am  busybox-x86_64.md5  chrootsetup.sh  enter.sh  exec.sh  lib.sh  root.mk  start.sh
test/test-root/: .gitignore
test/test_add_remove_dynamic_service/: test.sh
test/test_add_remove_dynamic_service_sub_config/: test.sh
test/test_root/: .gitignore  Makefile  busybox-x86_64.md5
test/test_start_stop_service/: service.sh  test.sh
test/test_start_stop_service_sub_config/: test.sh
tmpfiles.d/: Makefile.am  dnsmasq.conf  etc.conf  finit.conf  frr.conf  legacy.conf  lldpd.conf  openswan.conf  quagga.conf  sshd.conf  testserv.conf  uuidd.conf  var.conf  x11.conf
(+24 files in other folders)
